将酒图片上传按钮由“添加图片”改为“上传图片”

--- a/app/views/wine_details/share/_photos.html.erb
+++ b/app/views/wine_details/share/_photos.html.erb
@@ -1,7 +1,7 @@
 <div class="title_btn">
   
   <%= link_to  photo_upload_wine_path(@wine_detail), :class => [:btn_gray, :float_r] do %>
-	  <span>添加照片</span>
+	  <span>上传照片</span>
 	<% end %>
 	<h2>
 		所有照片
