将“添加照片”改为“上传照片”

--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -6,7 +6,7 @@
       <div class="btn_action">
           <% if current_user && current_user == @user %>
              <%= link_to new_photo_path(), :class => "btn_gray mr5" do %>
-                <span>添加照片</span>
+                <span>上传照片</span>
              <% end %>
              <%= link_to new_album_path(), :class => "new_album fancybox.ajax btn_gray"  do  %>
                 <span>创建相册</span>
