--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -11,7 +11,7 @@
             <span>编辑相册属性</span>
         <% end %>
         <%= link_to new_photo_path(:album_id => @album.id), :class => "btn_gray mr5" do %>  
-            <span>添加照片</span>
+            <span>上传照片</span>
         <% end %>
       <% end %>
       <%= link_to albums_user_path(@user), :class => "btn_gray" do %>  
