1.活动：跳转到edit月面，而不是添加酒的页面。 2. 活动添加活动用酒： 添加取消按钮。

--- a/app/views/event_wines/new.html.erb
+++ b/app/views/event_wines/new.html.erb
@@ -63,8 +63,8 @@
     <div class="wine_select_container">
       <p class="notice_b mb20">已选择的活动用酒：</p>
       <div class="wines  wine_select" style="overflow: auto">您还没有选择活动用酒</div>
-      <div class="btn_submit " style="display: none" >
-        <a click="$('#new_event_wine').submit()" href="javascript:void(0)" class="btn_bluesky_s mr10 save_button">
+      <div class="btn_submit" >
+        <a style="display: none" click="$('#new_event_wine').submit()" href="javascript:void(0)" class="btn_bluesky_s mr10 save_button">
           <span>保存</span>
         </a>
         <%= link_to edit_event_path(@event), :class => :btn_gray_b  do %>
