--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -5,8 +5,8 @@
 <script language="javascript" type="text/javascript">
   $(document).ready(function(){
       $('input.date').datetimepicker({
-        numberOfMonths: 2,
-        minDate: 0
+        numberOfMonths: 2
+//        minDate: 0
        // maxDate: 30
       });
   });
