网站email和私信模板内容更新

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,7 @@
-<p><b>亲爱的<%= @resource.username %>：</b></p>
+<p><b>亲爱的<%= link_to user_url(@resource) do %>
+	<%= @resource.username %>：
+	<% end %>
+</b></p>
 <p>欢迎加入iWine!</p>
 <p>请点击下面的链接完成注册：<br />
 <%= link_to confirmation_url(@resource, :confirmation_token => @resource.confirmation_token), confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %>
