--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -12,7 +12,7 @@
               <% end %>
             </div>
             <%= link_to "javascript:void(0);", :class => "float_l ml10 save" do %>
-              <%= image_tag "/assets/waterfall/images/common/btn_submit.jpg", :alt => "登录", :width => "96", :height => "41" %>
+              <%= image_tag "common/btn_submit.jpg", :alt => "登录", :width => "96", :height => "41" %>
             <% end %>
           </div>
           <div class="clear"></div>
