--- a/app/views/message_mailer/reply_message_email.html.erb
+++ b/app/views/message_mailer/reply_message_email.html.erb
@@ -4,13 +4,29 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <p>您好：<%= @message.conversation.get_reply_user(@message.sender).username %></p>
-    <p><%= @message.sender.username %> 回复了你的消息。</p>
+    <p>您好：
+      <%= link_to user_url(@message.conversation.get_reply_user(@message.sender)) do %>
+         <%= @message.conversation.get_reply_user(@message.sender).username %>
+      <% end %>
+    </p>
+    <p>
+      <%= link_to user_url(@message.sender) do %>
+        <%= @message.sender.username %>
+      <% end %>
+       回复了你的消息。
+    </p>
     <p><%= @message.body %></p>
     <br/>
     <p>对话历史记录:</p>
     <% @message.conversation.receipts_for(@message.sender).limit(5).order("id desc").each do |receipt| %>
-      <p><b><%= receipt.message.sender.username %>：</b><%= receipt.message.body %></p>
+      <p>
+        <b>
+        <%= link_to user_url(receipt.message.sender) do %>
+          <%= receipt.message.sender.username %>：
+        <% end %>
+        </b>
+        <%= receipt.message.body %>
+      </p>
     <% end %>
     <p>
      访问 <%= link_to root_url + conversation_path(@message.conversation),root_url + conversation_path(@message.conversation) %> 查看回复消息.
