--- a/app/views/admin/wines_registers/_form.html.erb
+++ b/app/views/admin/wines_registers/_form.html.erb
@@ -39,7 +39,16 @@
         </tr>
         <tr>
           <td><%= f.label :vintage %></td>
-          <td><%= f.date_select :vintage, :discard_day => true, :discard_month => true, :start_year => 1990, :end_year => Time.now.year %>年</td>
+          <td><%= f.date_select :vintage, 
+                  :discard_day => true, 
+                  :discard_month => true, 
+                  :start_year => 1990, 
+                  :end_year => Time.now.year,
+                  :prompt => {:year => "选择年份"} %>年</td>
+        </tr>
+        <tr>
+          <td>IS_NV</td>
+          <td><%= f.check_box :is_nv %></td>
         </tr>
         <tr>
           <td><%= f.label :drinkable_begin %></td>
