--- a/app/views/cellar_items/_form.html.erb
+++ b/app/views/cellar_items/_form.html.erb
@@ -7,13 +7,13 @@
     <div class="required">
       <label class="vm"><span>*</span>年份</label>
       <div class="content">
-        <%= f.date_select :year, :discard_day => true, 
+        <% if @wine.is_nv %>
+          <label class="nv">NV/无年份葡萄酒 </label>
+        <% else %>
+          <%= f.date_select :year, :discard_day => true, 
             :discard_month => true, :start_year => Time.now.year, 
             :end_year => 1950, :prompt => {:year => "选择年份"} %>年
-
-        <label class="nv">
-          <%= check_box_tag("users_wine_cellar_item[is_nv]", 1, @cellar_item.is_nv, :id => "check_nv") %>NV/无年份葡萄酒
-        </label>
+        <% end %>
       </div>
     </div>
     <div class="optional">
