email和系统通知模板（新）

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,4 @@
-<p><b>亲爱的
-	<%= link_to user_url(@resource) do %>
-	  <%= @resource.username %>：
-	<% end %>
-</b></p>
+<p><b>亲爱的<%= link_to @resource.username, user_url(@resource) %>：</b></p>
 
 <p>你在iWine.com要求重设您的密码。请点击以下链接输入您新的密码：</p>
 
