--- a/app/views/event_mailer/event_hold_tomorrow.text.erb
+++ b/app/views/event_mailer/event_hold_tomorrow.text.erb
@@ -1,7 +1,7 @@
-您报名参加的<%= @event.title %>活动明天就要举办了，请准时参加。
-<%= @event.title %>
-<%= @event.begin_at.to_s(:cn) %>
-<%= @event.full_address %>
-<%= link_to "点击查看详情", event_path(@event) %>.
+<p>您报名参加的<%= @event.title %>活动明天就要举办了，请准时参加。</p>
+<p><%= @event.title %></p>
+<p><%= @event.begin_at.to_s(:cn) %></p>
+<p><%= @event.full_address %></p>
+<p><%= link_to "点击查看详情", event_path(@event) %>.</p>
 
---爱红酒（iWine.com ）
+<p>--爱红酒（iWine.com ）</p>
