--- a/app/views/message_mailer/new_message_email.html.erb
+++ b/app/views/message_mailer/new_message_email.html.erb
@@ -3,10 +3,7 @@
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
 </head>
 <body>
-<p><%= link_to user_url(@message.sender) do %>
-	<%= @message.sender.username %> 
-   <% end %>
-	给你发来了新的消息。</p>
+<p><%= link_to @message.sender.username, user_url(@message.sender) %>给你发来了新的消息。</p>
 <p>
   访问 <%= link_to root_url + conversations_path,root_url + conversations_path %> 查看消息.
 </p>
