--- a/app/views/message_mailer/reply_message_email.html.erb
+++ b/app/views/message_mailer/reply_message_email.html.erb
@@ -4,16 +4,11 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <p>您好：
-      <%= link_to user_url(@message.conversation.get_reply_user(@message.sender)) do %>
-         <%= @message.conversation.get_reply_user(@message.sender).username %>
-      <% end %>
-    </p>
+      <p>您好：
+         <%= link_to @message.conversation.get_reply_user(@message.sender).username, user_url(@message.conversation.get_reply_user(@message.sender)) %>
+      </p>
     <p>
-      <%= link_to user_url(@message.sender) do %>
-        <%= @message.sender.username %>
-      <% end %>
-       回复了你的消息。
+      <%= link_to @message.sender.username, user_url(@message.sender) %>回复了你的消息。
     </p>
     <p><%= @message.body %></p>
     <br/>
@@ -21,9 +16,7 @@
     <% @message.conversation.receipts_for(@message.sender).limit(5).order("id desc").each do |receipt| %>
       <p>
         <b>
-        <%= link_to user_url(receipt.message.sender) do %>
-          <%= receipt.message.sender.username %>：
-        <% end %>
+          <%= link_to receipt.message.sender.username, user_url(receipt.message.sender) %> 
         </b>
         <%= receipt.message.body %>
       </p>
