--- a/app/views/photos/wine_photo_detail.html.erb
+++ b/app/views/photos/wine_photo_detail.html.erb
@@ -25,13 +25,14 @@
 			<div class="info clearfix">
 				
 				<%= render :partial => 'liked' %>
-				
-				<%= render 'share/sns_icons',
-                    :image_url => sns_image_url(@photo, :thumb_name => :large),
-                    :title => sns_title(@wine_detail),
-                    :summary => "的图片",
-                    :url => request.url %>
-				
+				<div class="share float_r">
+					<%= render 'share/sns_icons',
+	                    :image_url => sns_image_url(@photo, :thumb_name => :large),
+	                    :title => sns_title(@wine_detail),
+	                    :summary => "的图片",
+	                    :url => request.url %>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|
+				</div>
 				<div><%= @photo.views_count %>浏览 | <%= @comments.count %>评论</div>
 			</div>
 			<div class="comment">
