--- a/public/template/album_photo_detail.html
+++ b/public/template/album_photo_detail.html
@@ -84,8 +84,8 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
             </div>
               <div class="info">
-            	<div class="like float_r"><a href="#" class="icon_like">赞 (3)</a></div>
-                <div class="share float_r">分享到：<a href=" #"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a> |</div>
+            	<div class="like float_r">| &nbsp;&nbsp;&nbsp;<a href="#" class="icon_like">赞 (3)</a></div>
+                <div class="share float_r">分享到：<a href=" #"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
                 <div>10浏览 | 4评论</div>
             </div>
             <div class="comment">
