--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -25,7 +25,7 @@
                  link_to(album.name, album_show_user_path(@user, album)) %></h2>
       <p class="info">
         <%= album.photos_count %>张照片 <%= album.updated_at.to_s(:normal) %>更新<br/>
-        <%= album.viewed_num %>浏览 | <%= album.commented_num %>评论 | <%= album.likes.count %>赞
+        <%= album.all_photo_views_count %>浏览 | <%= album.all_photo_comments_count %>评论 | <%= album.all_photo_votes_count %>赞
       </p>
     </li>
     <% end %>
