--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -171,7 +171,7 @@ table.form th {text-align:right;}
 .logreg_box .right .sns p span {margin-bottom:10px;display:block;}
 .logreg_box .mid .info {margin:0 0 20px 0;font-size:14px;line-height:20px;}
 .logreg_box .mid .welcome {font-weight:bold;font-size:18px;padding:0 60px 30px 60px;}
-
+.logreg_box .field_with_errors label.message {padding:20px 0 0 0;display:block;}
 
 /*icon*/
 .icon_mail, .icon_like, .icon_add_album, .icon_delet, .icon_edit, .icon_add, .icon_delet2, .icon_comment, .icon_fol, .icon_fol_e, .icon_cellar {background:url(../images/icon/icon_all.gif) no-repeat;display:inline-block;}
