--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,52 +1,53 @@
 
 <div id="login">
-	<!--
-	<% if !devise_error_messages!.blank? %>
-		<div class="error"><%= devise_error_messages! %></div>
-	<% end %>
--->
-	<div class="password">
-		<div class="logreg_box">
-			<div class="top2"></div>
-			<div class="mid">
-				<div class="content">
-				<h2>重置密码</h2>
-				<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-				
-				<%= f.hidden_field :reset_password_token %>
-				<div id="stylized">
-					<table class="nor" width="90%" border="0" cellspacing="0" cellpadding="0">
-						<tr>
-							<td>新密码</td>
-							<td>
-								<div class="un">
-									<%= f.password_field :password, :class => "text", :placeholder => "请输入新密码" %>
-								</div>
-							</td>
-						</tr>
-						<tr>
-							<td>确认密码</td>
-							<td>
-								<div class="un">
-									<%= f.password_field :password, :class => "text", :placeholder => "请再次输入密码" %>
-								</div>
-							</td>
-						</tr>
-						<tr>
-							<td>&nbsp;</td>
-							<td>
-								<%= link_to "javascript:void(0)", :onclick => "$(this).parents('form').submit()" do %>
-									<%= image_tag "common/btn_submit.jpg", :width => 96, :height => 41, :alt => "提交" %>
-								<% end %>
-								<%= link_to( image_tag("common/btn_green_cancle.jpg", :width => 96, :height => 41, :alt => "取消"), root_url )%>
-							</td>
-						</tr>
-					</table>
-			    </div>
-				<% end %>
-				</div>
 
-			</div>
-			<div class="bot"></div>
-		</div>
-	</div>
+  <% if !devise_error_messages!.blank? %>
+    <div class="error"><%= devise_error_messages! %></div>
+  <% end %>
+
+  <div class="password">
+    <div class="logreg_box">
+      <div class="top2"></div>
+      <div class="mid">
+        <div class="content">
+          <h2>重置密码</h2>
+          <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :validate => true, :html => { :method => :put }) do |f| %>
+
+            <%= f.hidden_field :reset_password_token %>
+            <div id="stylized">
+              <table class="nor" width="90%" border="0" cellspacing="0" cellpadding="0">
+                <tr>
+                  <td>新密码</td>
+                  <td>
+                    <div class="un">
+                      <%= f.password_field :password, :class => "text", :placeholder => "请输入新密码", :validate => { :presence => true } %>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>确认密码</td>
+                  <td>
+                    <div class="un">
+                      <%= f.password_field :password_confirmation, :class => "text", :placeholder => "请再次输入密码", :validate => { :confirmation => true } %>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>&nbsp;</td>
+                  <td>
+                    <%= link_to "javascript:void(0)", :onclick => "$(this).parents('form').submit()" do %>
+                      <%= image_tag "common/btn_submit.jpg", :width => 96, :height => 41, :alt => "提交" %>
+                    <% end %>
+                    <%= link_to( image_tag("common/btn_green_cancle.jpg", :width => 96, :height => 41, :alt => "取消"), root_url )%>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          <% end %>
+        </div>
+
+      </div>
+      <div class="bot"></div>
+    </div>
+  </div>
+</div>
