iwine notes app update

--- a/public/template/notes/app/notes_landing.html
+++ b/public/template/notes/app/notes_landing.html
@@ -22,7 +22,7 @@
           <p>它是一个工具，但更是享受葡萄酒生活的魔法棒。</p>
           <p>&nbsp;</p>
           <p>支持多种语言： <img src="image/flag.gif" width="309" height="30" align="absmiddle" /> </p>
-          <p class="download clearfix"><a href="https://itunes.apple.com/cn/app/iwine-notes/id572825000?ls=1&mt=8" target="_blank"><img src="image/btn_appstore.jpg" alt="App Store" width="206" height="63" /></a><a href="#"><img src="image/btn_91.jpg" width="206" height="63" /></a></p>
+          <p class="download clearfix"><a href="https://itunes.apple.com/cn/app/iwine-notes/id572825000?ls=1&mt=8" target="_blank"><img src="image/btn_appstore.jpg" alt="App Store" width="206" height="63" /></a><a href="http://mobile.91.com/Soft/Detail.aspx?Platform=iPhone&f_id=1294502" target="_blank"><img src="image/btn_91.jpg" width="206" height="63" /></a></p>
       </div>
     </div>
 </body>
