修复js在ie浏览器的错误， self = this => var self = this

--- a/app/views/event_participants/edit.js.erb
+++ b/app/views/event_participants/edit.js.erb
@@ -43,7 +43,7 @@ $.fancybox({
 		validateForm: function(){
 			var errors = []
 			elements = this.inputs;
-			self = this;
+			var self = this;
     var reg_email = /email/;
 			_.each(elements, function(element){
 				if(self.check_prence(element['input'])){
