--- a/app/views/comments/_star_rate.js.erb
+++ b/app/views/comments/_star_rate.js.erb
@@ -33,7 +33,7 @@ $(function(){
     <% end %>
     window.StarsView = Backbone.View.extend({
         initialize: function() {
-            self = this
+            var self = this;
             _.each([1, 2, 3, 4, 5], function(num){
                 self.addOne(num);
             });
