--- a/app/views/events/followers.html.erb
+++ b/app/views/events/followers.html.erb
@@ -34,7 +34,7 @@
                 <li>
                   <div class="userpic">
                     <%= link_to_user p.user, user_path(p.user, :trailing_slash => true),
-                      {:with_avatar => true, :avatar_version => :thumb},
+                      {:with_avatar => true, :avatar_version => :middle},
                       {:size => '50x50', :alt => p.user.username } %>
                   </div>
                 <div class="userinfo">
