--- a/app/views/users/share/_follower_list.html.erb
+++ b/app/views/users/share/_follower_list.html.erb
@@ -2,11 +2,11 @@
 <% @followers.map_user.each_with_index do |user, index|%>
 <span>
   <% if index > 0 %>
-  <%= link_to_user user, user_path(user.id, :trailing_slash => true), 
+  <%= link_to_user user, user_path(user, :trailing_slash => true),
   {:with_avatar => true, :avatar_version => :middle},
   {:width => 50, :height => 50, :alt => user.username} %>
   <% else %>
-  <%= link_to_user user, user_path(user.id, :trailing_slash => true), 
+  <%= link_to_user user, user_path(user, :trailing_slash => true),
   {:with_avatar => true, :avatar_version => :large},
   {:width => 101, :height => 101, :alt => user.username} %>
   <% end %>
