--- a/app/views/users/share/_recommend_users.html.erb
+++ b/app/views/users/share/_recommend_users.html.erb
@@ -3,7 +3,7 @@
 <li>
   <div class="userpic">
     <%= link_to_user user, 
-		user_path(user.id,:trailing_slash => true), 
+		user_path(user,:trailing_slash => true),
 		{:with_avatar => true, :avatar_version => :large}, 
 		{:width => 50, :height => 50} %>
   </div>
