--- a/app/views/users/start.html.erb
+++ b/app/views/users/start.html.erb
@@ -42,7 +42,7 @@
     <li>
     <% end %>
       <%= link_to_user user, 
-      user_path(user.id,:trailing_slash => true), 
+      user_path(user,:trailing_slash => true),
       {:with_avatar => true, :avatar_version => :large}, 
       {:width => 50, :height => 50} %>
       <div class="meta">
