看别人酒窖“我－加关注”去掉，包括侧边栏

--- a/app/views/users/share/_user_followings.html.erb
+++ b/app/views/users/share/_user_followings.html.erb
@@ -23,8 +23,10 @@
               <p> 互相关注 </p>
             <% end %>
           <% else %>
-            <%= link_to follow_user_path(user), :class => "btn_gray", :method => :put do  %>
-              <span>加关注</span>
+            <% if current_user.id != user.id %>
+              <%= link_to follow_user_path(user), :class => "btn_gray", :method => :put do  %>
+                <span>加关注</span>
+              <% end %>
             <% end %>
           <% end %>
         </div>
