--- a/app/views/users/share/_user_followers.html.erb
+++ b/app/views/users/share/_user_followers.html.erb
@@ -23,17 +23,19 @@
       </span>    
     </p>
     <% else %>
-    <p>
-       <%= link_to follow_user_path(user), :class => "btn_gray", :method => :put do  %>
-           <span>加关注</span>
-       <% end %>    
+    <p> 
+      <% if current_user.id != user.id %>
+         <%= link_to follow_user_path(user), :class => "btn_gray", :method => :put do  %>
+             <span>加关注</span>
+         <% end %>   
+      <% end %>    
     </p>
     <% end %> 
     <% else %>  
     <%= link_to follow_user_path( user ), :class => "btn_gray", :method => :put do  %>
         <span>加关注</span>
-    <% end %>         
-    <% end # if user_signin? %>
+    <% end %>     
+    <% end # if user_signin? %> 
   </div>
 </li>
   <% if (index+1) % 3 === 0 %>
@@ -43,4 +45,4 @@
 </ul>
 <% else %>
 <p>暂时没有粉丝！ </p>
-<% end %>
+<% end %> 
