将logo变成png格式.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
       <div class="main950">
         <div id="logo">
           <%= link_to root_path() do %>
-            <%= image_tag "common/logo.gif", :width => 299, :height => 43 %>
+            <%= image_tag "common/logo.png", :width => 299, :height => 43 %>
           <% end %>
         </div>
         <div id="top_search">
